MDEV-21152 Bogus debug assertion btr_pcur_is_after_last_in_tree() in ibuf code

As noted in commit abd45cdc38e72ce329365ffe0df4c6f8c319b407
a search with PAGE_CUR_GE may land on the supremum record on
a leaf page that is not the rightmost leaf page. This could occur
when all keys on the current page are smaller than the search key,
and the smallest key on the successor page is larger than the search key.

Hence, after a failed PAGE_CUR_GE search, assertions
btr_pcur_is_after_last_in_tree() are bogus
and should be replaced with btr_pcur_is_after_last_on_page().